dev/kuberelated/deployment-arm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki-arm
spec:
  selector:
    matchLabels:
      app: wiki-arm
  replicas: 2
  template:
    metadata:
      labels:
        app: wiki-arm
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                    - arm64
      containers:
      - name: wiki
        image: <IMAGE>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
