dev/kuberelated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-wiki
  labels:
    app: wiki-arm
spec:
  selector:
    app: wiki-arm
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
