dev/kuberelated/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    name: wiki-ingress
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-wiki
            port: 
              number: 8080
